src/content_scripts/control_buttons.css
.xkit-control-button-container {
  display: inline-block;
  position: relative;

  margin-left: 20px;

  font-family: var(--font-family);
  font-size: 1rem;
  font-weight: 700;
  line-height: 1;
}

.xkit-control-button {
  color: inherit;
  font: inherit;
}

.xkit-control-button-inner {
  display: block;

  color: inherit;
  font: inherit;
}

.xkit-control-button-inner svg {
  width: 24px;
  height: 24px;

  fill: rgba(var(--black), 0.65);
}

.xkit-control-button:disabled {
  cursor: not-allowed;
}

.xkit-control-button:disabled svg {
  fill: rgba(var(--black), 0.4);
}

.xkit-control-button-container.in-new-footer {
  margin-left: 0;
}

.xkit-control-button-container.in-new-footer .xkit-control-button {
  border-radius: 9999px;
  width: 40px;
  height: 40px;
}

@media (max-width: 990px) {
  .xkit-control-button-container.in-legacy-footer {
    margin-left: 0;
  }

  .xkit-control-button-container.in-legacy-footer .xkit-control-button {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 48px;
    width: 48px;
  }
}

.xkit-controls-row {
  position: relative;

  display: flex;
  justify-content: flex-end;
  column-gap: 4px;
  padding: 12px 8px;
}

.xkit-controls-row::after {
  position: absolute;
  bottom: 0;
  left: 12px;
  right: 12px;

  border-bottom: 1px solid rgba(var(--black), .13);
  content: '';
}

@media (max-width: 540px) {
  .xkit-controls-row {
    column-gap: 0;
  }
}

